# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//tools/grit/grit_rule.gni")

# GYP version: components/components_strings.gyp:components_strings
grit("strings") {
  source = "../components_strings.grd"
}
